--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html lang="en"> 
 <head>
   <link rel="stylesheet" href="docsupport/style.css">
-  <link rel="stylesheet" href="chosen.css">
+  <link rel="stylesheet" href="chosen.css" />
   <style type="text/css" media="all">
     /* fix rtl for demo */
+    .chzn-rtl .chzn-search { left: -9000px; }
     .chzn-rtl .chzn-drop { left: -9000px; }
   </style>
 </head>
@@ -15,13 +16,7 @@
         <header>
           <h1>Chosen</h1>
         </header>
-        <p>Chosen is a jQuery plugin that makes long, unwieldy select boxes much more user-friendly.</p>
-
-        <p>
-          <a class="button button-blue" href="https://github.com/harvesthq/chosen/releases">Downloads</a>
-          <a class="button" href="https://github.com/harvesthq/chosen">Project Source</a>
-          <a class="button" href="https://github.com/harvesthq/chosen/blob/master/contributing.md">Contribute</a>
-        </p>
+        <p>Chosen is a JavaScript plugin for jQuery and Prototype that makes long, unwieldy select boxes much more user-friendly. For more information (including usage, explanation and faqs), check out the <a href="http://harvesthq.github.com/chosen/">online documentation</a> This page is implemented using the jQuery plugin. For Prototype users, please see <a href="index.proto.html">the Prototype example page</a>.</p>
       
       <h2>Standard Select</h2>
       <div class="side-by-side clearfix">
@@ -1421,7 +1416,7 @@
       <h2>Setup</h2>
       <p>Using Chosen is easy as can be.</p>
       <ol>
-        <li><a href="https://github.com/harvesthq/chosen/releases">Download</a> the plugin and copy the chosen files to your app.</li>
+        <li>Download the plugin and copy the chosen files to your app.</li>
         <li>Activate the plugin on the select boxes of your choice: <code>$(".chzn-select").chosen()</code></li>
         <li><a href="http://www.youtube.com/watch?feature=player_detailpage&v=UkSPUDpe0U8#t=11s">Disco</a>.</li>
       </ol>
@@ -1436,11 +1431,7 @@
          <h3>What browsers are supported?</h3>
          <p>All modern browsers are supported (Firefox, Chrome, Safari and IE9). Legacy support for IE8 is also enabled.</p>
        </li>
-       <li>
-          <h3>Didn't there used to be a Prototype version of Chosen?</h3>
-          <p><a href="index.proto.html">There still is!</a></p>
-        </li>
-      </ul>
+      <ul>
        
       <h2>Credits</h2>
 
@@ -1454,6 +1445,8 @@
       <footer>
        &copy; 2011 <a href="http://www.getharvest.com/">Harvest</a> - Chosen is licensed under the <a href="http://en.wikipedia.org/wiki/MIT_License">MIT license</a>.
       </footer>
+
+
 
     </div>  
   </div>
